nav-list fix z-index, del sub-menu

--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
         width: 100%;
         min-height: 75px;
         position: relative;
-        background-color: peachpuff;
+        background-color: black;
     }
 
     .logo {
