--- a/css/main-nav.css
+++ b/css/main-nav.css
@@ -8,50 +8,18 @@
 }
 
 .nav-list {
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-
-}
-
-.sub-nav-list__item {
-    display: flex;
-    padding: 5px 10px;
-    background-color: aqua;
-}
-
-.nav-list__link {
-    margin-left: 10px;
-    text-transform: uppercase;
-    font-size: 24px;
-    border-radius: 5px;
-
-}
-
-.nav-list__link:hover,
-.nav-list__link:active,
-.nav-list__link:focus {
-    background-color: #fff;
-    color: black;
-    transform: scale(1.1);
-    transition: 0.1s linear;
-}
-
-
-.nav-list {
     position: fixed;
     width: 100%;
-    min-height: 425px;
+    min-height: 450px;
     padding: 20px 40px;
     top: 75px;
     right: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     box-sizing: border-box;
     background-color: black;
-
 }
 
 .nav-list__item {
@@ -66,9 +34,19 @@
 .nav-list__link {
     margin: 10px 0;
     color: red;
-
+    text-transform: uppercase;
+    font-size: 24px;
+    border-radius: 5px;
 }
 
+.nav-list__link:hover,
+.nav-list__link:active,
+.nav-list__link:focus {
+    background-color: #fff;
+    color: black;
+    transform: scale(1.1);
+    transition: 0.1s linear;
+}
 
 .sub-nav-list {
     display: none;
@@ -76,10 +54,9 @@
 
 .nav-list {
     display: none;
-    z-index: 15000;
 }
 
 .active {
-    display: block;
+    display: flex;
     z-index: 15000;
 }
